--- a/app/boards/view.html
+++ b/app/boards/view.html
@@ -9,7 +9,7 @@
         <md-card dnd-draggable="sticky"
         dnd-moved="section.data.splice($index, 1)"
         dnd-effect-allowed="move"
- flex="45" class="md-card sticky" ng-repeat="sticky in section.data" >
+ flex="45" class="md-card sticky" ng-repeat="sticky in section.data" ng-style="{background:section.color}" >
           <md-card-content>
             <textarea layout-fill class="typing" ng-model="sticky.text" elastic></textarea>
           </md-card-content>
