sticky service added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="app/boards/board.service.js"></script>
 	<script src="app/boards/boards.controller.js"></script>
 	<script src="app/boards/boards.directive.js"></script>
+	<script src="app/boards/sticky.service.js"></script>
 	<script src="app/common/common.constants.js"></script>
 	<script src="app/common/common.directive.js"></script>
 	<script src="app/core/core.config.js"></script>
