text style fixed

--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -3,7 +3,7 @@
 <div layout="row" layout-xs="column">
   <div flex="30" style="border-right:1px solid #ddd;">
     <md-list>
-      <md-subheader class="create-board-header">Create Board</md-subheader>
+      <h3 class="create-board-header">Create Board</h3>
       <md-list-item>
         <md-input-container class="md-block" flex-gt-xs>
           <label>Name</label>
