--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
 	<script src="app/common/common.module.js"></script>
 	<script src="app/core/core.module.js"></script>
 	<script src="app/authentication/authentication.controller.js"></script>
+	<script src="app/authentication/authentication.interceptor.js"></script>
+	<script src="app/authentication/authentication.service.js"></script>
 	<script src="app/boards/board.service.js"></script>
 	<script src="app/boards/boards.controller.js"></script>
 	<script src="app/boards/boards.directive.js"></script>
 	<script src="app/boards/sticky.service.js"></script>
 	<script src="app/common/common.constants.js"></script>
 	<script src="app/common/common.directive.js"></script>
+	<script src="app/common/common.localstorage.js"></script>
 	<script src="app/core/core.config.js"></script>
 	<script src="app/core/route.config.js"></script>
+	<script src="app/layout/layout.controller.js"></script>
 	<!-- endinjector -->
 	</body>
 </html>
