--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -5,21 +5,21 @@
     <md-list>
       <h3 class="create-board-header">Create Board</h3>
       <md-list-item>
-        <md-input-container class="md-block" flex-gt-xs>
+        <md-input-container class="md-block" flex>
           <label>Name</label>
           <input  ng-model="vm.board.name">
         </md-input-container>
       </md-list-item>
 
       <md-list-item>
-        <md-input-container class="md-block" flex-gt-xs>
+        <md-input-container class="md-block" flex>
           <label>Description</label>
           <textarea ng-model="vm.board.description" md-maxlength="100" rows="5" md-select-on-focus></textarea>
         </md-input-container>
       </md-list-item>
 
       <md-list-item>
-        <md-input-container class="md-block" flex-gt-xs>
+        <md-input-container class="md-block" flex>
           <label>Board Type</label>
           <md-select ng-change="vm.getRowSpan()" ng-model="vm.board.type">
             <md-option ng-repeat="type in vm.boardtypes" ng-value="type">
@@ -29,15 +29,15 @@
         </md-input-container>
       </md-list-item>
 
-      <md-list-item ng-repeat="section in vm.board.type.section">
+      <md-list-item ng-repeat="section in vm.board.type.section track by $index" layout-align="center">
         <md-input-container class="md-block" flex>
           <label>Section Name({{::section.originalName}})</label>
           <input ng-blur="section.name=section.name||section.originalName" ng-model="section.name">
         </md-input-container>
-         <md-input-container class="md-block" flex="30">
+         <md-input-container class="md-block" flex="20">
             <label>Color</label>
             <md-select ng-model="section.color">
-              <md-option ng-repeat="color in vm.availableColors" ng-value="color">
+              <md-option ng-repeat="color in vm.availableColors track by $index" ng-value="color">
                 <span ng-style="{background:color,color:color}" >##</span>
               </md-option>
             </md-select>
@@ -45,11 +45,11 @@
       </md-list-item>
 
       <md-list-item>
-        <md-contact-chips flex-gt-xs ng-model="vm.board.team" secondary-placeholder="Enter Team Name or Emails" placeholder="Enter Team Name or Emails">
+        <md-contact-chips flex ng-model="vm.board.team" secondary-placeholder="Enter Team Name or Emails" placeholder="Enter Team Name or Emails">
         </md-contact-chips>
       </md-list-item>
       <md-list-item  md-no-ink>
-        <div layout-margin flex-gt-xs>
+        <div layout-margin flex>
           <md-checkbox class="md-primary" ng-model="vm.board.timeout" aria-label="timeout">
             Timeout (15 Mins)
           </md-checkbox>
