checkbox to make it private

--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -53,6 +53,9 @@
           <md-checkbox class="md-primary" ng-model="vm.board.timeout" aria-label="timeout">
             Timeout (15 Mins)
           </md-checkbox>
+          <md-checkbox class="md-primary" ng-model="vm.board.private" aria-label="Private">
+            Private
+          </md-checkbox>
         </div>
       </md-list-item>
       <md-list-item >
