--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -7,7 +7,7 @@
       <md-list-item>
         <md-input-container class="md-block" flex>
           <label>Name</label>
-          <input  ng-model="vm.board.name">
+          <input  ng-model="vm.board.name" required="">
         </md-input-container>
       </md-list-item>
 
