--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -36,9 +36,9 @@
         </md-input-container>
          <md-input-container class="md-block" flex="20">
             <label>Color</label>
-            <md-select ng-model="section.color">
+            <md-select ng-init="section.color=vm.availableColors[5]" ng-model="section.color">
               <md-option ng-repeat="color in vm.availableColors track by $index" ng-value="color">
-                <span ng-style="{background:color,color:color}" >##</span>
+                <span ng-class="color" >&nbsp &nbsp &nbsp</span>
               </md-option>
             </md-select>
           </md-input-container>
@@ -73,7 +73,7 @@
         {{section.name}}
       </div>
       <div layout="row" layout-wrap>
-        <md-card flex="42" class="md-card sticky-preview" ng-style="{background: section.color}">
+        <md-card flex="42" class="md-card sticky-preview" ng-class="section.color">
           <md-card-content style="height: 35px;">
           some text
           </md-card-content>
@@ -81,7 +81,7 @@
                     <md-button class="md-icon-button"><md-icon md-font-icon="fa fa-heart"></md-icon></md-button>
                   </md-card-actions>
         </md-card>
-        <md-card flex="42" class="md-card sticky-preview" ng-style="{background: section.color}" >
+        <md-card flex="42" class="md-card sticky-preview" ng-class="section.color" >
           <md-card-content style="height: 35px;">
           some text
           </md-card-content>
