added validation message for wrong username or password

--- a/app/authentication/login.html
+++ b/app/authentication/login.html
@@ -28,6 +28,7 @@
             <md-button class="md-raised md-primary" ng-disabled="loginForm.$invalid" ng-click="vm.login(vm.user)">Login</md-button>
             <md-button class="md-raised md-primary">Register</md-button>
           </md-card-actions>
+          <p class="text-danger" ng-bind="vm.errMsg"></p>
           <md-divider></md-divider>
           <p >or you can sign in using</p>
           <md-card-actions layout="row">
