--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="app/app.js"></script>
 	<script src="app/authentication/authentication.module.js"></script>
 	<script src="app/boards/boards.module.js"></script>
+	<script src="app/profile/profile.module.js"></script>
 	<script src="app/common/common.module.js"></script>
 	<script src="app/core/core.module.js"></script>
 	<script src="app/authentication/authentication.controller.js"></script>
@@ -40,6 +41,7 @@
 	<script src="app/authentication/authentication.service.js"></script>
 	<script src="app/boards/board.service.js"></script>
 	<script src="app/boards/boards.controller.js"></script>
+	<script src="app/profile/profile.controller.js"></script>
 	<script src="app/boards/boards.directive.js"></script>
 	<script src="app/boards/sticky.service.js"></script>
 	<script src="app/common/common.constants.js"></script>
