Refactoring css using scss

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<!-- injector:css -->
-		<link rel="stylesheet" href="app/authentication/authentication.css">
-		<link rel="stylesheet" href="app/boards/board.css">
+		<link rel="stylesheet" href="css/style.css">
 		<!-- endinjector -->
 		<title>JBoards</title>
 	</head>
