--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<script src="app/authentication/authentication.service.js"></script>
 	<script src="app/boards/board.service.js"></script>
 	<script src="app/boards/boards.controller.js"></script>
+	<script src="app/profile/profile.service.js"></script>
 	<script src="app/profile/profile.controller.js"></script>
 	<script src="app/boards/boards.directive.js"></script>
 	<script src="app/boards/sticky.service.js"></script>
