--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -1,7 +1,7 @@
 
 
 <div layout="row" layout-xs="column">
-  <div flex="30" style="border-right:1px solid #ddd;">
+  <div flex="30" class="bg-white md-whiteframe-2dp">
   <form name="createBoard">
     <md-list>
       <h3 class="create-board-header">Create Board</h3>
@@ -73,7 +73,7 @@
       <span class="text-center">{{vm.board.name||"Board Name"}}</span>
     </div>
     <div layout="row" layout-wrap layout-align="center center">
-    <div flex="40" class="md-whiteframe-2dp" layout-padding layout-margin ng-repeat="section in vm.board.type.section track by $index">
+    <div flex="40" class="md-whiteframe-2dp bg-white" layout-padding layout-margin ng-repeat="section in vm.board.type.section track by $index">
       <div layout-align="center">
         {{section.name}}
       </div>
