--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<!-- injector:css -->
 		<link rel="stylesheet" href="app/authentication/authentication.css">
 		<link rel="stylesheet" href="app/boards/board.css">
+		<link rel="stylesheet" href="app/profile/profile.css">
 		<!-- endinjector -->
 		<title>JBoards</title>
 	</head>
