profile alignment fixed

--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -1,5 +1,5 @@
-<md-content layout layout-align="center center" >
-  <div flex="80" layout layout-align="center start"  class="profile-view-area">
+<md-content layout layout-align="center start" class="profile-content-area" >
+  <div flex="80" layout  class="profile-view-area">
     <div flex layout style="margin-top:5%;">
       <div class="profile-image-area" flex="30" layout  layout-align="center start">
         
