--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-<md-content>
-  <h1>Profile</h1>
-=======
-<md-content layout layout-align="center center" >
+
+<md-content layout layout-align="center start" style="height:91vh;" >
   <div flex="80" layout layout-align="center start"  class="profile-view-area">
     <div flex layout style="margin-top:5%;">
       <div class="profile-image-area" flex="30" layout  layout-align="center start">
@@ -16,5 +13,4 @@
       </div>
     </div>
   </div>
->>>>>>> refs/remotes/origin/master
 </md-content>
