removed inline css and added to scss file

--- a/app/authentication/login.html
+++ b/app/authentication/login.html
@@ -1,14 +1,10 @@
-<div layout="row" class="login-page" layout-align="center center" style="background:#3F51B5;" >
+<div layout="row" class="login-page" layout-align="center center" >
   <div layout="column">
     <form novalidate="" name="loginForm">
-      <md-card style="padding: 3rem;" >
+      <md-card class="login-form" >
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline" style="font-size: 1.5rem;
-    padding: 1rem;
-    color: #7D7575;
-    font-family: Montserrat;
-    font-weight: bold;">Login</span>
+            <span class="md-headline login-header">Login</span>
           </md-card-title-text>
         </md-card-title>
         <md-card-content layout="column" layout-align="center center">
