--- a/app/boards/view.html
+++ b/app/boards/view.html
@@ -1,25 +1,27 @@
 <div layout-margin>
-  <h3 class="text-center board-name text-capitalize">{{vm.board.name||"Board Name"}}</h3>
-  <div layout="row" layout-wrap  layout-align="center start" >
-  <div flex="30" dnd-drop="vm.dropCallback(event, index, item, external, type, 'itemType')" dnd-list="section.data" class="md-whiteframe-2dp bg-white" layout-margin ng-repeat="section in vm.board.type.section">
-    <div layout-align="center">
-      {{section.name}}
-    </div>
-      <div layout="row" flex  layout-wrap>
-        <md-card dnd-draggable="sticky"
-        dnd-moved="section.data.splice($index, 1)"
-        dnd-effect-allowed="move"
- flex="45" class="md-card sticky" ng-repeat="sticky in section.data" ng-class="section.color" >
-          <md-card-content>
-            <textarea submit-on-enter="vm.saveSticky(sticky,section)"  layout-fill class="typing" placeholder="Add Text" ng-model="sticky.text" elastic></textarea>
-          </md-card-content>
-          <md-card-actions layout="row" layout-align="end end">
-            <md-button class="md-icon-button"><md-icon md-font-icon="fa fa-heart"></md-icon></md-button>
-          </md-card-actions>
-        </md-card>
-        <md-button flex class="addMore" md-no-ink ng-click="vm.addSticky(section.data)"><md-icon md-font-icon="fa fa-plus"></md-icon></md-button></md-button>
-      </div>
+    <h3 class="text-center board-name text-capitalize">{{board.name||"Board Name"}}</h3>
+    <div layout="row" layout-wrap layout-align="center start">
+        <div flex="30" dnd-drop="dropCallback(event, index, item, external, type, 'itemType')" dnd-list="section.data" class="md-whiteframe-2dp bg-white" layout-margin ng-repeat="section in board.type.section">
+            <div layout-align="center">
+                {{section.name}}
+            </div>
+            <div layout="row" flex layout-wrap>
+                <md-card dnd-draggable="sticky" dnd-moved="section.data.splice($index, 1)" dnd-effect-allowed="move" flex="45" class="md-card sticky" ng-repeat="sticky in section.data" ng-class="section.color">
+                    <md-card-content>
+                        <textarea submit-on-enter="saveSticky(sticky,section)" layout-fill class="typing" placeholder="Add Text" ng-model="sticky.text" elastic></textarea>
+                    </md-card-content>
+                    <md-card-actions layout="row" layout-align="end end">
+                        <md-button class="md-icon-button">
+                            <md-icon md-font-icon="fa fa-heart"></md-icon>
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+                <md-button flex class="addMore" md-no-ink ng-click="addSticky(section)">
+                    <md-icon md-font-icon="fa fa-plus"></md-icon>
+                </md-button>
+                </md-button>
+            </div>
 
+        </div>
     </div>
-  </div>
 </div>
