--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<!-- injector:css -->
-		<link rel="stylesheet" href="app/profile/profile.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="app/profile/profile.css">
 		<!-- endinjector -->
 		<title>JBoards</title>
 	</head>
@@ -27,30 +27,34 @@
 	<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 	<script src="vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
 	<script src="vendor/angular-resource/angular-resource.js"></script>
+	<script src="vendor/firebase/firebase.js"></script>
+	<script src="vendor/angularfire/dist/angularfire.js"></script>
 	<!-- endbower -->
 
 	<!-- injector:js -->
 	<script src="app/app.js"></script>
 	<script src="app/authentication/authentication.module.js"></script>
 	<script src="app/boards/boards.module.js"></script>
-	<script src="app/profile/profile.module.js"></script>
 	<script src="app/common/common.module.js"></script>
 	<script src="app/core/core.module.js"></script>
+	<script src="app/profile/profile.module.js"></script>
 	<script src="app/authentication/authentication.controller.js"></script>
 	<script src="app/authentication/authentication.interceptor.js"></script>
 	<script src="app/authentication/authentication.service.js"></script>
 	<script src="app/boards/board.service.js"></script>
-	<script src="app/boards/boards.controller.js"></script>
-	<script src="app/profile/profile.service.js"></script>
-	<script src="app/profile/profile.controller.js"></script>
 	<script src="app/boards/boards.directive.js"></script>
+	<script src="app/boards/create.controller.js"></script>
+	<script src="app/boards/listing.controller.js"></script>
 	<script src="app/boards/sticky.service.js"></script>
+	<script src="app/boards/view.controller.js"></script>
 	<script src="app/common/common.constants.js"></script>
 	<script src="app/common/common.directive.js"></script>
 	<script src="app/common/common.localstorage.js"></script>
 	<script src="app/core/core.config.js"></script>
 	<script src="app/core/route.config.js"></script>
 	<script src="app/layout/layout.controller.js"></script>
+	<script src="app/profile/profile.controller.js"></script>
+	<script src="app/profile/profile.service.js"></script>
 	<!-- endinjector -->
 	</body>
 </html>
