--- a/app/boards/create.html
+++ b/app/boards/create.html
@@ -23,7 +23,7 @@
                 <md-list-item>
                     <md-input-container class="md-block" flex>
                         <label>Board Type</label>
-                        <md-select ng-change="vm.changeType(vm.selectedRetroType)" ng-model="vm.selectedRetroType">
+                        <md-select ng-change="vm.changeType(vm.board.type)" ng-model="vm.board.type">
                             <md-option ng-repeat="type in vm.boardtypes" ng-value="type">
                                 {{type.name}}
                             </md-option>
@@ -31,7 +31,7 @@
                     </md-input-container>
                 </md-list-item>
 
-                <md-list-item ng-repeat="section in vm.sections track by $index" layout-align="center">
+                <md-list-item ng-repeat="section in vm.board.type.section track by $index" layout-align="center">
                     <md-input-container class="md-block" flex>
                         <label>Section Name({{::section.originalName}})</label>
                         <input ng-blur="section.name=section.name||section.originalName" ng-model="section.name">
@@ -71,7 +71,7 @@
             <span class="text-center board-name text-capitalize">{{vm.board.name||"Board Name"}}</span>
         </div>
         <div layout="row" layout-wrap layout-align="center center">
-            <div flex="40" class="md-whiteframe-2dp bg-white" layout-padding layout-margin ng-repeat="section in vm.sections track by $index">
+            <div flex="40" class="md-whiteframe-2dp bg-white" layout-padding layout-margin ng-repeat="section in vm.board.type.section track by $index">
                 <div layout-align="center">
                     {{section.name}}
                 </div>
