--- a/app/boards/view.html
+++ b/app/boards/view.html
@@ -1,14 +1,17 @@
 <div layout-margin>
-    <h3 class="text-center board-name text-capitalize">{{board.name||"Board Name"}}</h3>
+    <h3 class="text-center board-name text-capitalize">{{vm.board.name||"Board Name"}}</h3>
     <div layout="row" layout-wrap layout-align="center start">
-        <div flex="30" dnd-drop="dropCallback(event, index, item, external, type, 'itemType')" dnd-list="section.data" class="md-whiteframe-2dp bg-white" layout-margin ng-repeat="section in board.type.section">
+        <div flex="30" dnd-drop="vm.dropCallback(event, index, item, external, type, 'itemType')" dnd-list="section.data" class="md-whiteframe-2dp bg-white" layout-margin ng-repeat="(sid,section) in vm.board.type.section">
             <div layout-align="center">
                 {{section.name}}
             </div>
             <div layout="row" flex layout-wrap>
-                <md-card dnd-draggable="sticky" dnd-moved="section.data.splice($index, 1)" dnd-effect-allowed="move" flex="45" class="md-card sticky" ng-repeat="sticky in section.data" ng-class="section.color">
+                <md-card dnd-draggable="sticky" dnd-effect-allowed="move" flex="45" class="md-card sticky" ng-repeat="(stickykey,sticky) in vm.stickes[sid]" ng-class="section.color">
+                    <a class="delete" ng-click="vm.removeSticky(sid,stickykey)">
+                        <md-icon md-font-icon="fa fa-times"></md-icon>
+                    </a>
                     <md-card-content>
-                        <textarea submit-on-enter="saveSticky(sticky,section)" layout-fill class="typing" placeholder="Add Text" ng-model="sticky.text" elastic></textarea>
+                        <textarea submit-on-enter="vm.saveSticky(sticky,sid,stickykey)" layout-fill class="typing" placeholder="Add Text" ng-model="sticky.text" elastic></textarea>
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="end end">
                         <md-button class="md-icon-button">
@@ -16,9 +19,8 @@
                         </md-button>
                     </md-card-actions>
                 </md-card>
-                <md-button flex class="addMore" md-no-ink ng-click="addSticky(section)">
+                <md-button flex class="addMore" md-no-ink ng-click="vm.addSticky(sid)">
                     <md-icon md-font-icon="fa fa-plus"></md-icon>
-                </md-button>
                 </md-button>
             </div>
 
